# python-murfey

./: .bumpclient.toml  .bumpversion.cfg  .bumpversion.toml  .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  AUTHORS.rst  LICENSE  MANIFEST.in  README.md  api-spec.yaml  catalog-info.yaml  example_file.txt  logconfig.py  logfile  pip_bootstrap.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.azure-pipelines/: azure-pipelines.yml  ci.yml
.github/: renovate.json
.github/workflows/: ci.yml  codeql.yml  publish-version.yml  run-tests.yml  test-and-publish.yml  test.yml  version-bump.yml
.github/workflows/config/: ispyb.cfg  my.cnf
.github/workflows/scripts/: syntax-validation.py
Dockerfiles/: murfey-frontend  murfey-instrument-server  murfey-rsync  murfey-server
Helm/: Chart.yaml
Helm/charts/murfey-instrument-server-clem/: Chart.yaml
Helm/charts/murfey-instrument-server-tem/: Chart.yaml
Helm/charts/murfey-rsync/: Chart.yaml
Helm/charts/murfey-server/: Chart.yaml
murfey-frontend/: mime.types  openapi.yaml  package.json  tsconfig.json
murfey-frontend/nginx/: conf.d
murfey-frontend/public/: index.html
murfey-frontend/src/: index.tsx
murfey-frontend/src/components/: forms.tsx  gridSquareCard.tsx  instrumentCard.tsx  navbar.tsx  protectedRoutes.tsx  setupStepper.tsx  upstreamVisitsCard.tsx
murfey-frontend/src/loaders/: dataCollectionGroups.tsx  general.tsx  gridSquares.tsx  hub.tsx  jwt.tsx  machineConfig.tsx  magTable.tsx  multigridSetup.tsx  possibleGainRefs.tsx  processingParameters.tsx  rsyncers.tsx  sessionSetup.tsx  session_clients.tsx  visits.tsx
murfey-frontend/src/routes/: DataCollectionGroups.tsx  Error.tsx  GainRefTransfer.tsx  GridSquares.tsx  Home.tsx  Hub.tsx  Login.tsx  MagTable.tsx  MultigridSetup.tsx  NewSession.tsx  ProcessingParameters.tsx  Root.tsx  Session.tsx  SessionLinker.tsx  SessionSetup.tsx  UserParameters.tsx
murfey-frontend/src/schema/: main.ts
murfey-frontend/src/styles/: colours.tsx  components.ts  main.css  theme.tsx
murfey-frontend/src/utils/: generic.tsx
src/client/: client_main_test.py  main.py
src/murfey/: __init__.py  __main__.py
src/murfey/bootstrap/: __main__.py
src/murfey/cli/: __init__.py  add_user.py  build_images.py  create_config.py  create_db.py  db_sessions.py  decrypt_db_password.py  dlq_resubmit.py  dummy.py  generate_config.py  generate_crypto_key.py  generate_db_password.py  generate_openapi_schema.py  generate_route_manifest.py  inject_spa_processing.py  lif_to_tiff.py  murfey_db_sql.py  repost_failed_calls.py  spa_ispyb_messages.py  tiff_to_stack.py  transfer.py
src/murfey/client/: __init__.py  analyser.py  client_main_test.py  context.py  customlogging.py  destinations.py  gain_ref.py  instance_environment.py  main.py  multigrid_control.py  progressbar_block.py  rsync.py  transfer.py  tui.py  update.py  watchdir.py  watchdir_multigrid.py  websocket.py  websockets.py
src/murfey/hub/: __init__.py  api.py  main.py
src/murfey/instrument_server/: __init__.py  api.py  main.py
src/murfey/server/: MURFEY_DB.md  README.md  __init__.py  api.py  bootstrap.py  config.py  customlogging.py  demo_api.py  example_environment_file  feedback.py  gain.py  instrument.py  ispyb.py  main.py  main_test.py  murfey_db.py  prometheus.py  run.py  state.py  websocket.py  whitelist.py
src/murfey/templates/: activevisits.html  base.html  bootstrap.html  home.html  visit.html
src/murfey/util/: __init__.py  api.py  atlas.py  client.py  config.py  db.py  dummy_setup.py  eer.py  fib.py  file_monitor.py  instrument_models.py  lif.py  logging.py  mdoc.py  models.py  processing_db.py  processing_params.py  route_manifest.yaml  rsync.py  sim.py  spa_metadata.py  spa_params.py  state.py  tomo.py  tomo_metadata.py
src/murfey/utils/: __init__.py  file_monitor.py  rsync.py  state.py
src/murfey/workflows/: lif_to_stack.py  lif_to_tiff.py  register_atlas_update.py  register_data_collection.py  register_data_collection_group.py  register_experiment_type_update.py  register_processing_job.py  tiff_to_stack.py
src/server/: example_environment_file  main.py  main_test.py
src/transferscript/client/: client_main_test.py  main.py
src/transferscript/server/: example_environment_file  main.py  main_test.py  run.py
src/transferscript/utils/: __init__.py  file_monitor.py  rsync.py
tests/: __init__.py  conftest.py  test_bootstrap.py
tests/cli/: test_build_images.py  test_decrypt_password.py  test_generate_key.py  test_generate_openapi_schema.py  test_generate_password.py  test_generate_route_manifest_cli.py  test_repost_failed_calls.py
tests/client/: test.py  test_analyser.py  test_context.py  test_destinations.py  test_instance_environment.py  test_rsync.py  test_watchdir.py
tests/client/contexts/: test_atlas.py  test_clem.py  test_fib.py  test_sim.py  test_sxt.py  test_tomo.py
tests/client/tui/: test_main.py
tests/instrument_server/: test_api.py  test_init.py
tests/server/: test_feedback.py  test_feedback_job_reservation.py  test_gain.py  test_ispyb.py  test_main.py  test_state.py
tests/server/api/: test_auth_api.py  test_file_io_instrument.py  test_instrument.py  test_logging_api.py  test_movies.py  test_session_control.py  test_session_info.py  test_session_shared.py  test_workflow.py  test_workflow_fib.py  test_workflow_sim.py
tests/util/: test_1.mdoc  test_api.py  test_client.py  test_config.py  test_fib_util.py  test_init.py  test_lif.py  test_logging.py  test_logging_util.py  test_mdoc.py  test_monitor.py  test_processing_db.py  test_rsync.py  test_set_default_acquisition_output.py  test_state.py
tests/utils/: test_monitor.py  test_rsync.py  test_state.py
tests/workflows/: test_processing_job.py  test_register_atlas_update.py  test_register_data_collection.py  test_register_data_collection_group.py  test_register_experiment_type_update.py  test_register_processing_job.py
tests/workflows/clem/: test_align_and_merge.py  test_process_raw_lifs.py  test_process_raw_tiffs.py  test_register_align_and_merge_results.py  test_register_preprocessing_results.py
(+109 files in other folders)
