[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 40.6.0",
    "wheel",
]

[project]
name = "murfey"
version = "0.19.2"
description = "Client-Server architecture hauling Cryo-EM data"
readme = "README.md"
keywords = [
    "",
]
license = {file = "LICENSE"}
maintainers = []
authors = []
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "backports.entry_points_selectable",
    "defusedxml", # For safely parsing XML files
    "pydantic>=2",
    "pydantic-settings",
    "requests",
    "rich",
    "werkzeug",
    "xmltodict",
]
[project.optional-dependencies]
cicd = [
    "pytest-cov", # Used for generating PyTest coverage reports
]
client = [
    "textual==0.42.0",
    "websocket-client",
]
developer = [
    "bump-my-version", # Version control
    "ipykernel", # Enable interactive coding with VS Code and Jupyter Notebook
    "pre-commit", # Formatting, linting, type checking, etc.
    "pytest", # Test code functionality
    "pytest-mock", # Additional mocking tools for unit tests
]
instrument-server = [
    "aiohttp",
    "fastapi[standard]<0.116.0",
    "python-jose",
]
server = [
    "aiohttp",
    "cryptography",
    "fastapi[standard]<0.116.0",
    "ispyb>=10.2.4", # Responsible for setting requirements for SQLAlchemy and mysql-connector-python;
    "jinja2",
    "mrcfile",
    "numpy<2",
    "packaging",
    "passlib",
    "pillow",
    "prometheus_client",
    "python-jose[cryptography]",
    "sqlalchemy[postgresql]", # Add as explicit dependency
    "sqlmodel",
    "stomp-py<=8.1.0", # 8.1.1 (released 2024-04-06) doesn't work with our project
    "zocalo>=1",
]
[project.urls]
Bug-Tracker = "https://github.com/DiamondLightSource/python-murfey/issues"
Documentation = "https://github.com/DiamondLightSource/python-murfey"
GitHub = "https://github.com/DiamondLightSource/python-murfey"
[project.scripts]
"murfey.add_user" = "murfey.cli.add_user:run"
"murfey.client" = "murfey.client.tui.main:run"
"murfey.create_db" = "murfey.cli.create_db:run"
"murfey.db_sql" = "murfey.cli.murfey_db_sql:run"
"murfey.decrypt_password" = "murfey.cli.decrypt_db_password:run"
"murfey.generate_key" = "murfey.cli.generate_crypto_key:run"
"murfey.generate_password" = "murfey.cli.generate_db_password:run"
"murfey.generate_route_manifest" = "murfey.cli.generate_route_manifest:run"
"murfey.instrument_server" = "murfey.instrument_server:run"
"murfey.repost_failed_calls" = "murfey.cli.repost_failed_calls:run"
"murfey.server" = "murfey.server.run:run"
"murfey.sessions" = "murfey.cli.db_sessions:run"
"murfey.simulate" = "murfey.cli.dummy:run"
"murfey.spa_inject" = "murfey.cli.inject_spa_processing:run"
"murfey.spa_ispyb_entries" = "murfey.cli.spa_ispyb_messages:run"
"murfey.transfer" = "murfey.cli.transfer:run"
[project.entry-points."murfey.config.extraction"]
"murfey_machine" = "murfey.util.config:get_extended_machine_config"
[project.entry-points."murfey.workflows"]
"clem.align_and_merge" = "murfey.workflows.clem.align_and_merge:submit_cluster_request"
"clem.process_raw_lifs" = "murfey.workflows.clem.process_raw_lifs:zocalo_cluster_request"
"clem.process_raw_tiffs" = "murfey.workflows.clem.process_raw_tiffs:zocalo_cluster_request"
"clem.register_align_and_merge_result" = "murfey.workflows.clem.register_align_and_merge_results:register_align_and_merge_result"
"clem.register_lif_preprocessing_result" = "murfey.workflows.clem.register_preprocessing_results:register_lif_preprocessing_result"
"clem.register_tiff_preprocessing_result" = "murfey.workflows.clem.register_preprocessing_results:register_tiff_preprocessing_result"
"pato" = "murfey.workflows.notifications:notification_setup"
"picked_particles" = "murfey.workflows.spa.picking:particles_picked"
"spa.flush_spa_preprocess" = "murfey.workflows.spa.flush_spa_preprocess:flush_spa_preprocess"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"murfey.client.tui" = ["*.css"]
"murfey.util" = ["route_manifest.yaml"]

[tool.setuptools.packages.find]
where = ["src", "tests"]

[tool.isort]
profile = "black"

[tool.flake8]
# Flake8-pyproject allows TOML file settings to be read into Flake8
# URL: https://pypi.org/project/Flake8-pyproject/
select = [
    "C4",
    "E401",
    "E711",
    "E712",
    "E713",
    "E714",
    "E721",
    "E722",
    "E901",
    "F401",
    "F402",
    "F403",
    "F405",
    "F541",
    "F631",
    "F632",
    "F633",
    "F811",
    "F812",
    "F821",
    "F822",
    "F841",
    "F901",
    "W191",
    "W291",
    "W292",
    "W293",
    "W602",
    "W603",
    "W604",
    "W605",
    "W606",
]
ignore = [
    "E203",
    "E266",
    "E501",
    "W503",
]
max-line-length = "88"

[tool.pyproject-fmt]
inputs = "pyproject.toml"
check = false
indent = 4
keep_full_version = true
max-supported-python = "3.12"

[tool.pytest.ini_options]
addopts = "-ra"

[tool.mypy]
disable_error_code = [
    "annotation-unchecked",  # Notification that the bodies of untyped functions aren't checked. Not critical
    "import-untyped",  # Error for missing library stubs. Not critical
]
