[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 40.6.0",
    "wheel",
]

[project]
name = "murfey"
version = "0.23.0"
description = "Client-Server architecture hauling Cryo-EM data"
readme = "README.md"
keywords = [
    "",
]
license = {file = "LICENSE"}
maintainers = []
authors = []
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp",
    "defusedxml", # For safely parsing XML files
    "fastapi[standard-no-fastapi-cloud-cli]>=0.116.0",
    "pydantic>=2",
    "pydantic-settings",
    "python-jose",
    "requests",
    "rich",
    "werkzeug",
    "xmltodict",
]
[project.optional-dependencies]
cicd = [
    "pytest-cov", # Used for generating PyTest coverage reports
]
developer = [
    "bump-my-version", # Version control
    "ipykernel", # Enable interactive coding with VS Code and Jupyter Notebook
    "pre-commit", # Formatting, linting, type checking, etc.
    "pytest", # Test code functionality
    "pytest-asyncio", # For testing async functions
    "pytest-mock", # Additional mocking tools for unit tests
]
server = [
    "cryptography",
    "graypy",
    "ispyb>=10.2.4", # Responsible for setting requirements for SQLAlchemy and mysql-connector-python;
    "jinja2",
    "mrcfile",
    "numpy<2",
    "packaging",
    "passlib",
    "pillow",
    "prometheus_client",
    "sqlalchemy[postgresql]", # Add as explicit dependency
    "sqlmodel",
    "stomp-py>8.1.1", # 8.1.1 (released 2024-04-06) doesn't work with our project
    "zocalo>=1",
]
[project.urls]
Bug-Tracker = "https://github.com/DiamondLightSource/python-murfey/issues"
Documentation = "https://github.com/DiamondLightSource/python-murfey"
GitHub = "https://github.com/DiamondLightSource/python-murfey"
[project.scripts]
"murfey.add_user" = "murfey.cli.add_user:run"
"murfey.create_db" = "murfey.cli.create_db:run"
"murfey.db_sql" = "murfey.cli.murfey_db_sql:run"
"murfey.decrypt_password" = "murfey.cli.decrypt_db_password:run"
"murfey.generate_key" = "murfey.cli.generate_crypto_key:run"
"murfey.generate_openapi_schema" = "murfey.cli.generate_openapi_schema:run"
"murfey.generate_password" = "murfey.cli.generate_db_password:run"
"murfey.generate_route_manifest" = "murfey.cli.generate_route_manifest:run"
"murfey.instrument_server" = "murfey.instrument_server:run"
"murfey.repost_failed_calls" = "murfey.cli.repost_failed_calls:run"
"murfey.server" = "murfey.server.run:run"
"murfey.sessions" = "murfey.cli.db_sessions:run"
"murfey.simulate" = "murfey.cli.dummy:run"
"murfey.spa_inject" = "murfey.cli.inject_spa_processing:run"
"murfey.transfer" = "murfey.cli.transfer:run"
[project.entry-points."murfey.config.extraction"]
"murfey_machine" = "murfey.util.config:get_extended_machine_config"
[project.entry-points."murfey.workflows"]
"atlas_update" = "murfey.workflows.register_atlas_update:run"
"clem.align_and_merge" = "murfey.workflows.clem.align_and_merge:submit_cluster_request"
"clem.process_raw_lifs" = "murfey.workflows.clem.process_raw_lifs:zocalo_cluster_request"
"clem.process_raw_tiffs" = "murfey.workflows.clem.process_raw_tiffs:zocalo_cluster_request"
"clem.register_align_and_merge_result" = "murfey.workflows.clem.register_align_and_merge_results:register_align_and_merge_result"
"clem.register_preprocessing_result" = "murfey.workflows.clem.register_preprocessing_results:run"
"data_collection" = "murfey.workflows.register_data_collection:run"
"data_collection_group" = "murfey.workflows.register_data_collection_group:run"
"experiment_type_update" = "murfey.workflows.register_experiment_type_update:run"
"pato" = "murfey.workflows.notifications:notification_setup"
"picked_particles" = "murfey.workflows.spa.picking:particles_picked"
"picked_tomogram" = "murfey.workflows.tomo.picking:picked_tomogram"
"processing_job" = "murfey.workflows.register_processing_job:run"
"spa.flush_spa_preprocess" = "murfey.workflows.spa.flush_spa_preprocess:flush_spa_preprocess"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"murfey.util" = ["route_manifest.yaml"]

[tool.setuptools.packages.find]
where = ["src", "tests"]

[tool.ruff]
line-length = 88
lint.extend-ignore = ["E203", "E266", "E501", "E731", "E741"]
lint.select = [
    "C4",
    "E4", "E7", "E9",
    "F",
    "I",
    "W6",
]
fix = true

[tool.ruff.lint.isort]
known-first-party = ["murfey"]
combine-as-imports = true

[tool.ruff.format]
quote-style="double"
indent-style="space"
line-ending="auto"

[tool.pyproject-fmt]
inputs = "pyproject.toml"
check = false
indent = 4
keep_full_version = true
max-supported-python = "3.12"

[tool.pytest.ini_options]
addopts = "-ra"

[tool.mypy]
disable_error_code = [
    "annotation-unchecked",  # Notification that the bodies of untyped functions aren't checked. Not critical
    "import-untyped",  # Error for missing library stubs. Not critical
]
