[metadata]
name = transferscript
version = 0.0.1
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
project-urls =
    Bug-Tracker = https://github.com/DiamondLightSource/python-transferscript/issues
    Documentation = https://github.com/DiamondLightSource/python-transferscript
    GitHub = https://github.com/DiamondLightSource/python-transferscript

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
zip_safe = False

[options.entry_points]
console_scripts =
    transferscript.client = transferscript.client.main:run
    transferscript.server = transferscript.server.run:run

[options.extras_require]
server = fastapi; zocalo; graypy; ispyb; uvicorn[standard]
client = textual; procrunner

[options.packages.find]
where = src

[flake8]
# Black disagrees with flake8 on a few points. Ignore those.
ignore = E203, E266, E501, W503
# E203 whitespace before ':'
# E266 too many leading '#' for block comment
# E501 line too long
# W503 line break before binary operator

max-line-length = 88

select =
    E401,E711,E712,E713,E714,E721,E722,E901,
    F401,F402,F403,F405,F541,F631,F632,F633,F811,F812,F821,F822,F841,F901,
    W191,W291,W292,W293,W602,W603,W604,W605,W606,
    # flake8-comprehensions, https://github.com/adamchainz/flake8-comprehensions
    C4,
