[metadata]
name = murfey
description = Client-Server architecture hauling Cryo-EM data
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.11.5
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
project_urls =
    Bug-Tracker = https://github.com/DiamondLightSource/python-murfey/issues
    Documentation = https://github.com/DiamondLightSource/python-murfey
    GitHub = https://github.com/DiamondLightSource/python-murfey

[options]
include_package_data = True
install_requires =
    pydantic
    requests
    rich
packages = find:
package_dir =
    =src
python_requires = >=3.9
zip_safe = False

[options.entry_points]
console_scripts =
    murfey = murfey.client:run
    murfey.server = murfey.server:run
    murfey.simulate = murfey.cli.dummy:run
    murfey.transfer = murfey.cli.transfer:run
    murfey.db_sql = murfey.cli.murfey_db_sql:run
    murfey.sessions = murfey.cli.db_sessions:run
    murfey.generate_password = murfey.cli.generate_db_password:run 
    murfey.generate_key = murfey.cli.generate_crypto_key:run
    murfey.decrypt_password = murfey.cli.decrypt_db_password:run
    murfey.create_db = murfey.cli.create_db:run
    murfey.spa_inject = murfey.cli.inject_spa_processing:run
    murfey.spa_ispyb_entries = murfey.cli.spa_ispyb_messages:run

[options.extras_require]
all =
    mysql-connector-python <=8.3.0
    fastapi >=0.101
    cryptography
    importlib_resources; python_version<'3.9'
    ispyb
    jinja2
    packaging
    numpy
    sqlmodel
    pillow
    prometheus_client
    uvicorn[standard]
    werkzeug
    zocalo
    procrunner
    textual ==0.42.0
    websocket-client
    werkzeug
    xmltodict
server =
    mysql-connector-python <=8.3.0
    fastapi >=0.101
    cryptography
    importlib_resources; python_version<'3.9'
    ispyb
    jinja2
    packaging
    numpy
    sqlmodel
    pillow
    prometheus_client
    uvicorn[standard]
    werkzeug
    zocalo
client =
    procrunner
    textual ==0.42.0
    websocket-client
    werkzeug
    xmltodict

[options.packages.find]
where = src

[options.package_data]
murfey.client.tui =
    *.css

[flake8]
# Black disagrees with flake8 on a few points. Ignore those.
ignore = E203, E266, E501, W503
# E203 whitespace before ':'
# E266 too many leading '#' for block comment
# E501 line too long
# W503 line break before binary operator

max-line-length = 88

select =
    E401,E711,E712,E713,E714,E721,E722,E901,
    F401,F402,F403,F405,F541,F631,F632,F633,F811,F812,F821,F822,F841,F901,
    W191,W291,W292,W293,W602,W603,W604,W605,W606,
    # flake8-comprehensions, https://github.com/adamchainz/flake8-comprehensions
    C4,
